@@ -1,4 +1,4 @@
-# Begin /etc/sysconfig/openldap
+# Begin /etc/sysconfig/slapd
 
 # slapd normally serves ldap only on all TCP-ports 389. slapd can also
 # service requests on TCP-port 636 (ldaps) and requests via unix
@@ -10,4 +10,4 @@
 # See man 8 slapd for more information
 SLAPD_OPTIONS=""
 
-# End /etc/sysconfig/openldap
+# End /etc/sysconfig/slapd
